<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fifteen_dp"
    android:background="@color/grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/contactUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:text="@string/contactus"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_toRightOf="@id/contactUs"
                android:src="@drawable/icon_contact"
                android:visibility="gone">

            </ImageView>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:layout_margin="@dimen/five_dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/email_con" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/five_dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/customer_service_hot" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:text="@string/mob1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:text="@string/mob2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/five_dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/monfri" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:text="@string/time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:text="@string/satsun"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                android:text="@string/time2" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/tech_support" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:orientation="vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:text="@string/tech_support_email" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/five_dp"
            android:background="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/tech_support" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/mob1" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tech_monfri"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed"
            android:layout_margin="@dimen/five_dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tech_time"
            android:layout_margin="@dimen/five_dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed"
            android:layout_margin="@dimen/five_dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closed"
            android:textColor="@color/red"
            android:fontFamily="sans-serif-condensed"
            android:layout_margin="@dimen/five_dp"
            />


    </LinearLayout>

</ScrollView>