<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".activity.ForgetPasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/forgetPasswordBlock"
        android:layout_marginBottom="@dimen/ten_dp"
        android:layout_marginTop="@dimen/fifty_dp"
        android:src="@drawable/splashscreen" />


    <LinearLayout
        android:id="@+id/forgetPasswordBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten_dp"
            android:singleLine="true"
            android:text="@string/forgetPasswordLarge"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/black"
            android:textSize="@dimen/thirty_dp"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:gravity="center"
            android:layout_marginLeft="@dimen/ten_dp"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginRight="@dimen/ten_dp"
            android:text="@string/forget_text"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/alreadyMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:gravity="center"
            android:layout_marginLeft="@dimen/ten_dp"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginRight="@dimen/ten_dp"
            android:text="@string/already_member"
            android:textColor="@color/black"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/forgetPasMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twenty_dp"
            android:maxLength="10"
            android:hint="@string/mobile"
            android:inputType="number" />

        <Button
            android:id="@+id/btnForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:background="@drawable/rectangle_shpae"
            android:text="@string/submit"

            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>