<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/ten_dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/get_quote"
            android:textColor="@color/black"

            android:textStyle="bold" />


        <RelativeLayout
            android:id="@+id/calCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp">


            <TextView
                android:id="@+id/pickUpDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/one_dp"
                android:fontFamily="sans-serif-condensed"
                android:text="8/8/2020"
                android:textSize="@dimen/fiften_sp" />

            <ImageView
                android:id="@+id/calenderIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/five_dp"
                android:src="@drawable/calendar" />


        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/from"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/fromAddressBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp">

            <EditText
                android:id="@+id/fromAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/one_dp"
                android:layout_toLeftOf="@+id/fromAddrIcon"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/pickup"
                android:textSize="@dimen/fiften_sp" />

            <ImageView
                android:id="@+id/fromAddrIcon"
                android:layout_width="@dimen/fifty_dp"
                android:layout_height="@dimen/forty_dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/placeholder"

                />
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/to"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/toAddressBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp">

            <EditText
                android:id="@+id/toAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/one_dp"
                android:layout_toLeftOf="@+id/toAddrIcon"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/delivery"
                android:textSize="@dimen/fiften_sp" />

            <ImageView
                android:id="@+id/toAddrIcon"
                android:layout_width="@dimen/fifty_dp"
                android:layout_height="@dimen/forty_dp"
                android:layout_alignParentRight="true"

                android:src="@drawable/placeholder" />
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/service"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/selectService"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_dp"

            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/twenty_dp"

            android:layout_marginRight="@dimen/ten_dp"></Spinner>


        <Spinner
            android:id="@+id/itemDetail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_dp"

            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/ten_dp"></Spinner>


        <Spinner
            android:id="@+id/itemWeight"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/ten_dp"></Spinner>


        <Button
            android:id="@+id/getPriceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fifteen_dp"
            android:background="@drawable/rectangel_white"
            android:enabled="true"
            android:text="Get Quote"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/clearQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fifteen_dp"
            android:background="@drawable/rectangle_shpae"
            android:enabled="true"
            android:text="CLEAR"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <!-- <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
             >

         <EditText
             android:id="@+id/length"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/width"
             />

         <EditText
             android:id="@+id/width"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/height"

             />

         <EditText
             android:id="@+id/height"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             />

         </RelativeLayout>-->

    </LinearLayout>
</ScrollView>