<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/logoBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_marginRight="@dimen/twenty_dp">

        <ImageView
            android:id="@+id/sosyIconInLogin"
            android:layout_width="@dimen/two_hun_dp"
            android:layout_height="@dimen/one_fifty_dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/ten_dp"

            android:src="@drawable/splashscreen" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loginBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/socialMediaLoginBlock"
        android:layout_below="@+id/logoBlock"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/fifty_dp"
        android:layout_marginRight="@dimen/twenty_dp"
        android:layout_marginBottom="@dimen/fifty_dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_login_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp">

            <EditText
                android:id="@+id/login_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:hint="Mobile Number"
                android:inputType="phone"
                android:maxLength="10"
                android:singleLine="true"
                android:textSize="@dimen/fiften_sp"
                android:theme="@style/EditTextHintColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_login_mobile"
            android:layout_marginTop="@dimen/five_dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textSize="@dimen/fiften_sp"
                android:theme="@style/EditTextHintColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_login_password"
            android:layout_marginTop="@dimen/ten_dp"
            android:enabled="false"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/login" />

        <TextView
            android:id="@+id/login_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/forget_password"
            android:textColor="@color/sun_atlantic_color"
            android:textSize="@dimen/fifteen_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/signup"
            android:textColor="@color/sun_atlantic_color"
            android:textSize="@dimen/fifteen_sp"
            android:textStyle="bold"

            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/socialMediaLoginBlock"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true">

        <include layout="@layout/fragment_social_signup" />

    </RelativeLayout>


</RelativeLayout>